--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Location Based AR.js demo</title>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>GeoAR.js demo</title>
+    <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
+    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
 
-  </head>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    <script>
+        THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+    </script>
+</head>
 
-  <body">
-
-  <h1>hola mundo</h1>
- 
-  </body>
-</html>
+<body style='margin: 0; overflow: hidden;'>
+    <a-scene
+    
+        vr-mode-ui="enabled: false"
+		embedded
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+        
+        <a-entity gltf-model="./assets/magnemite/planta.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: -75.896142; latitude: 2.385307;"/>
+        <a-camera gps-camera rotation-reader></a-camera>
+	</a-scene>
+</body>
 
