Prueba 11 - Realidad aumentada en la web

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <a-marker preset="hiro">
       <a-entity
         position="0 0 0"
-        scale=" 5 "
-        gltf-model="./assets/magnemite/model.gltf"
+        scale="0.05 0.05 0.05"
+        gltf-model="./assets/planta.gltf"
       ></a-entity>
     </a-marker>
+
     <a-entity camera></a-entity>
   </a-scene>
 </body>
