Prueba 13 - Realidad aumentada en la web

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a-entity
         position="0 0 0"
         scale="0.05 0.05 0.05"
-        gltf-model="./assets/planta.gltf"
+        gltf-model="./assets/CoffeePlant.gltf"
       ></a-entity>
     </a-marker>
 
