--- a/index.html
+++ b/index.html
@@ -7,59 +7,46 @@
 
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-
-    <script>
-      window.onload = function () {
-        document
-          .querySelector(".say-hi-button")
-          .addEventListener("click", function () {
-            // here you can change also a-scene or a-entity properties, like
-            // changing your 3D model source, size, position and so on
-            // or you can just open links, trigger actions...
-            alert("Hi there!");
-          });
-      };
-    </script>
-
-    <style>
-      .buttons {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 5em;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 10;
-      }
-
-      .say-hi-button {
-        padding: 0.25em;
-        border-radius: 4px;
-        border: none;
-        background: white;
-        color: black;
-        width: 4em;
-        height: 2em;
-      }
-    </style>
-
+    <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"> </script>
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
-  <div class="buttons">
-    <button class="say-hi-button">SAY HI!</button>
-  </div>
-  <a-scene embedded arjs>
-    <a-marker preset="hiro">
-      <a-entity
-        position="0 0 0"
-        scale="0.05 0.05 0.05"
-        gltf-model="./assets/CoffeePlant.gltf"
-      ></a-entity>
-    </a-marker>
+  
+  <a-scene
+      arjs
+      embedded
+      renderer="logarithmicDepthBuffer: true;"
+      vr-mode-ui="enabled: false"
+      gesture-detector
+      id="scene"
+    >
 
+    <a-assets>
+      <a-asset-item
+        id="bowser"
+        src="./assets/CoffeePlant.gltf"
+      >
+      </a-asset-item>
+    </a-assets>
+
+    <a-marker
+        preset="hiro"
+        raycaster="objects: .clickable"
+        emitevents="true"
+        cursor="fuse: false; rayOrigin: mouse;"
+        id="markerA"
+      >
+        <a-entity
+          id="bowser-model"
+          gltf-model="#bowser"
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          class="clickable"
+          gesture-handler
+        >
+
+      </a-entity>
+    </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
