Prueba 21 - Realidad aumentada en la web

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         
-        <a-entity gltf-model="./assets/magnemite/CoffeePlant.gltf" rotation="0 180 0" scale="0.5 0.5 0.5" gps-entity-place="longitude: -75.896142; latitude: 2.385307;"/>
+        <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.5 0.5 0.5" gps-entity-place="longitude: -75.896142; latitude: 2.385307;"/>
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
 </body>
