Prueba 23 - Realidad aumentada en la web

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
-      <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.1 0.1 0.1"/>
+      <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.1 0.1 0.1" position="0 30 0"/>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
