--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"> </script>
 </head>
 <body>
-    <!-- Aframe scene -->
-  
-    <a-scene embedded arjs renderer="precision: mediump">
-        <!-- Declaring chart component -->
-        <a-box position='0 0 -4' material='color: green;'></a-box>
-        <!-- Aframe camera -->
+    <a-scene 
+      embedded 
+      arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;' 
+      renderer="precision: mediump">
+
+        <a-box gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.5 0.5 0.5" position='0 0 -4'></a-box>
+        
         <a-entity camera look-controls pointerLockEnabled>
             <a-cursor></a-cursor>
         </a-entity>
