--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
       embedded 
       arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;' 
       renderer="precision: mediump">
-
-        <a-box gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.5 0.5 0.5" position='0 0 -4'></a-box>
         
-        <a-entity camera look-controls pointerLockEnabled>
+        <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.5 0.5 0.5" position='0 0 -4' camera look-controls pointerLockEnabled>
             <a-cursor></a-cursor>
         </a-entity>
     </a-scene>
