--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset='utf-8'>
+    <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>My A-Frame Scene</title>
+    <title>GeoAR.js demo</title>
     <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
     <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
 
@@ -11,16 +11,44 @@
     <script>
         THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
     </script>
+    <script src=" https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
 </head>
-<body>
-    <!-- Aframe scene -->
-  
-    <a-scene embedded arjs renderer="precision: mediump">
-        <!-- Declaring chart component -->
-        <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.5 0.5 0.5" position='0 0 -4'/>
-        <a-camera gps-camera rotation-reader></a-camera>
-            <a-cursor></a-cursor>
-        </a-entity>
-    </a-scene>
+
+<body style='margin: 0; overflow: hidden;'>
+    <a-scene
+    arjs
+    embedded
+    renderer="logarithmicDepthBuffer: true;"
+    vr-mode-ui="enabled: false"
+    gesture-detector
+    id="scene">
+    
+    <a-assets>
+      <a-asset-item
+        id="bowser"
+        src="./assets/CoffeePlant.gltf"
+        rotation="0 180 0" 
+        scale="0.5 0.5 0.5" 
+        gps-entity-place="longitude: -75.896142; latitude: 2.385307;"
+      >
+      </a-asset-item>
+    </a-assets>
+
+      <a-entity
+        id="bowser-model"
+        gltf-model="#bowser"
+        position="0 0 0"
+        scale="0.05 0.05 0.05"
+        class="clickable"
+        gesture-handler
+      >
+      </a-entity>
+    </a-marker>
+
+    <a-camera gps-camera rotation-reader></a-camera>
+
+  </a-scene>
 </body>
 </html>
+
+
