--- a/Con_Marcador.html
+++ b/Con_Marcador.html
@@ -15,35 +15,40 @@
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
-    <a-scene
-    arjs
-    embedded
-    renderer="logarithmicDepthBuffer: true;"
-    vr-mode-ui="enabled: false"
-    gesture-detector
-    id="scene">
+  <a-scene
+  arjs
+  embedded
+  renderer="logarithmicDepthBuffer: true;"
+  vr-mode-ui="enabled: false"
+  gesture-detector
+  id="scene"
+>
+  <a-assets>
+    <a-asset-item
+      id="bowser"
+      src="./assets/CoffeePlant.gltf"
+    >
+    </a-asset-item>
+  </a-assets>
 
-    <a-assets>
-      <a-asset-item
-        id="bowser"
-        src="./assets/CoffeePlant.gltf"
-      >
-      </a-asset-item>
-    </a-assets>
-
-      <a-entity
-        id="bowser-model"
-        gltf-model="#bowser"
-        position="0 0 0"
-        scale="0.05 0.05 0.05"
-        class="clickable"
-        gesture-handler
-      >
-      </a-entity>
-    </a-marker>
-
-    <a-camera gps-camera rotation-reader></a-camera>
-
+  <a-marker
+    preset="hiro"
+    raycaster="objects: .clickable"
+    emitevents="true"
+    cursor="fuse: false; rayOrigin: mouse;"
+    id="markerA"
+  >
+    <a-entity
+      id="bowser-model"
+      gltf-model="#bowser"
+      position="0 0 0"
+      scale="0.05 0.05 0.05"
+      class="clickable"
+      gesture-handler
+    >
+    </a-entity>
+  </a-marker>
+  <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
