--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
     <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
 
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script>
-        THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
-    </script>
-    <script src=" https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+    <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
@@ -26,7 +22,7 @@
   <a-assets>
     <a-asset-item
       id="bowser"
-      src="./assets/CoffeePlant.gltf"
+      src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb"
     >
     </a-asset-item>
   </a-assets>
@@ -49,7 +45,7 @@
     </a-entity>
   </a-marker>
   <a-entity camera></a-entity>
-  </a-scene>
+</a-scene>
 </body>
 </html>
 
