--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <a-assets>
     <a-asset-item
       id="bowser"
-      src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb"
+      src="./assets/CoffeePlant.gltf"
     >
     </a-asset-item>
   </a-assets>
