--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>GeoAR.js demo</title>
-    <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script>
-        THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+      window.onload = () => {                       navigator.geolocation.getCurrentPosition((position) => {
+        document.querySelector('a-entity').setAttribute('gps-entity-place', `latitude: ${position.coords.latitude}; longitude: ${position.coords.longitude};`)
+      });
+     }
     </script>
 </head>
 
@@ -17,10 +19,10 @@
     <a-scene
     
         vr-mode-ui="enabled: false"
-		embedded
-        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+		    embedded
+        arjs="sourceType: webcam; debugUIEnabled: false;"></a-scene>
         
-        <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.5 0.5 0.5" gps-entity-place="longitude: -75.896142; latitude: 2.385307;"/>
+        <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.1 0.1 0.1" position="0 180 0"/>
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
 </body>
