--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     
         vr-mode-ui="enabled: false"
 		    embedded
-        arjs="sourceType: webcam; debugUIEnabled: false;"></a-scene>
+        arjs="sourceType: webcam; debugUIEnabled: false;">
         
         <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.1 0.1 0.1" position="0 180 0"/>
-        <a-camera gps-camera rotation-reader></a-camera>
+        <a-camera gps-camera rotation-reader> </a-camera>
 	</a-scene>
 </body>
 </html>
