--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>GeoAR.js demo</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Location Based AR.js demo</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
@@ -13,19 +12,18 @@
       });
      }
     </script>
-</head>
+  </head>
 
-<body style='margin: 0; overflow: hidden;'>
+  <body style="margin: 0; overflow: hidden;">
     <a-scene
-    
-        vr-mode-ui="enabled: false"
-		    embedded
-        arjs="sourceType: webcam; debugUIEnabled: false;">
-        
-        <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.1 0.1 0.1" position="0 180 0"/>
-        <a-camera gps-camera rotation-reader> </a-camera>
-	</a-scene>
-</body>
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="sourceType: webcam; debugUIEnabled: false;"
+    >
+      <a-entity gltf-model="./assets/CoffeePlant.gltf" rotation="0 180 0" scale="0.1 0.1 0.1" position="0 180 0"/>
+      <a-camera gps-camera rotation-reader> </a-camera>
+    </a-scene>
+  </body>
 </html>
 
 
