--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="./assets/CoffeePlant.gltf"
+                    src="./assets/asset.gltf"
                 ></a-asset-item>
             </a-assets>
 
