--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
             embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
+            renderer="precision: mediump;"
         >
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="./assets/asset.gltf"
+                    src="assets/asset.gltf"
                 ></a-asset-item>
             </a-assets>
 
@@ -28,7 +29,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 2.926583; longitude: -75.295673;"
+                    camera look-controls pointerLockEnabled
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
