--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="1 1 1"
+                    position='0 0 -4'
                     camera look-controls pointerLockEnabled
                 ></a-entity>
-
-            <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
