--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.5 0.5 0.5"
+                    scale="1 1 1"
+                    position='0 0 -4'
                     camera look-controls pointerLockEnabled
                 ></a-entity>
+
+            <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
