--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
+            renderer="precision: mediump;"
         >
             <a-assets>
                 <a-asset-item
