--- a/propio/index.html
+++ b/propio/index.html
@@ -27,7 +27,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.5035887911530149 0.5035887911530149 0.5035887911530149"
+                    scale="1 1 1"
                     gps-entity-place="latitude: 2.385307; longitude: -75.896142;"
                 ></a-entity>
 
