--- a/ARjs/index.html
+++ b/ARjs/index.html
@@ -19,7 +19,7 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="assets/planta_cafe.gltf"
+                    src="assets/plata.gltf"
                 ></a-asset-item>
             </a-assets>
 
