--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    position='0 0 -10'
+                    position='0 -20 -20' 
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
+
+<!-- position='0 0 distancia' -->
 
