--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    position='0 -20 -20' 
+                    position='-20 0 -20' 
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
@@ -36,5 +36,5 @@
     </body>
 </html>
 
-<!-- position='0 0 distancia' -->
+<!-- position='0 altura distancia' -->
 
