--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
+            renderer="precision: mediump;"
         >
             <a-assets>
                 <a-asset-item
@@ -28,7 +29,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    position='190 0 10' 
+                    position='190 0 10'
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
@@ -36,5 +37,4 @@
     </body>
 </html>
 
-<!-- position altura distancia' -->
-
+<!-- position='190 0 10' / position='ubicación altura distancia' -->
