--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
                     gltf-model="#animated-asset"
                     scale="5 5 5"
                     position='0 0 20'
+                    rotation='0 180 0'
                 ></a-entity>
 
-            <a-camera id='camera1' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader> </a-camera>
+            <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
