--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    position='0 0 0'
                 ></a-entity>
 
-            <a-camera gps-camera rotation-reader camera="" position="0 0 20" rotation=""></a-camera>
+            <a-camera gps-camera rotation-reader camera="" position="0 0 +20" rotation=""></a-camera>
         </a-scene>
     </body>
 </html>
