Prueba 121 - Realidad aumentada en la web

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="1 1 1"
+                    scale="5 5 5"
+                    position='0 0 20'
                 ></a-entity>
 
-            <a-camera gps-camera rotation-reader camera="" position="0 0 20" rotation=""></a-camera>
+            <a-camera gps-camera rotation-reader position="0 0 0"></a-camera>
         </a-scene>
     </body>
 </html>
