--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+        <script>
+            THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+        </script>
     </head>
 
     <body style="margin: 0; overflow: hidden;">
@@ -15,7 +18,7 @@
             renderer="logarithmicDepthBuffer: true;"
             embedded
             loading-screen="enabled: false;"
-            arjs="sourceType: webcam; debugUIEnabled: false;"
+            arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         >
             <a-assets>
                 <a-asset-item
@@ -29,10 +32,11 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    position='0 0 20'
+                    gps-entity-place="latitude: 2.385307; longitude: -75.896142;"
+                    rotation="0 180 0"
                 ></a-entity>
 
-            <a-camera gps-camera rotation-reader position="0 0 0"></a-camera>
+            <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
