--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     gltf-model="#animated-asset"
                     scale="5 5 5"
                     gps-entity-place="latitude: 2.385307; longitude: -75.896142;"
+                    rotation="0 10 0"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
