--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     gltf-model="#animated-asset"
                     scale="5 5 5"
                     gps-entity-place="latitude: 2.385307; longitude: -75.896142;"
-                    rotation="0 10 0"
+                    position="180 0 20"
                 ></a-entity>
 
-            <a-camera gps-camera rotation-reader></a-camera>
+                <a-camera gps-camera rotation-reader camera="" position="" rotation=""></a-camera>
         </a-scene>
     </body>
 </html>
