Prueba 130 - Realidad aumentada en la web

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     scale="5 5 5"
                 ></a-entity>
 
-                <a-camera gps-camera rotation-reader camera="" position="0 0 100" rotation=""></a-camera>
+                <a-camera gps-camera rotation-reader position="0 0 20"></a-camera>
         </a-scene>
     </body>
 </html>
