--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+        <script>
+            THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+        </script>
     </head>
 
     <body style="margin: 0; overflow: hidden;">
@@ -29,6 +32,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
+                    gps-entity-place="latitude: 2.385307; longitude: -75.896142;"
                 ></a-entity>
 
                 <a-camera gps-camera rotation-reader position="0 0 20"></a-camera>
