--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    gps-entity-place="latitude: 2.385307; longitude: -75.896142;"
+                    gps-entity-place="latitude: ; longitude: ;"
                 ></a-entity>
 
                 <a-camera gps-camera rotation-reader position="0 0 20"></a-camera>
