--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    position="0 0 20"
                 ></a-entity>
 
-                <a-camera gps-camera rotation-reader></a-camera>
+                <a-camera gps-camera rotation-reader position="0 0 20" material scale geometry position></a-camera>
         </a-scene>
     </body>
 </html>
