--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     gltf-model="#animated-asset"
                     scale="5 5 5"
                 ></a-entity>
-
-                <a-camera gps-camera rotation-reader position="0 0 20"></a-camera>
+                
+                <a-camera id='camera1' position="0 0 20" look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader> </a-camera>
         </a-scene>
     </body>
 </html>
