Prueba 144 - Realidad aumentada en la web

--- a/registro.html
+++ b/registro.html
@@ -36,6 +36,7 @@
 
                 <a-camera gps-camera rotation-reader camera="" position="0 0 20" rotation=""></a-camera>
                 <!-- <a-camera gps-camera rotation-reader position="0 0 20" material scale geometry position></a-camera> -->
+                <!-- <a-camera id='camera1' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader> </a-camera> -->
         </a-scene>
     </body>
 </html>
