Prueba 145 - Realidad aumentada en la web

--- a/registro.html
+++ b/registro.html
@@ -35,11 +35,18 @@
                 ></a-entity>
 
                 <a-camera gps-camera rotation-reader camera="" position="0 0 20" rotation=""></a-camera>
+
+                <!-- Ubicación GPS -->
+                <!-- gps-entity-place="latitude:2.486700; longitude:-75.730460;" -->
+
+                <!-- Test de objeto al frente -->
                 <!-- <a-camera gps-camera rotation-reader position="0 0 20" material scale geometry position></a-camera> -->
+
+                <!-- Camara Suave -->
                 <!-- <a-camera id='camera1' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' gps-camera='gpsMinDistance: 5' rotation-reader> </a-camera> -->
         </a-scene>
     </body>
 </html>
 
-<!-- gps-entity-place="latitude: ; longitude: ;" -->
+
 <!-- position='190 0 10' / position='ubicación altura distancia' -->
