--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             renderer="logarithmicDepthBuffer: true;"
             embedded
             loading-screen="enabled: false;"
-            arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+            arjs="sourceType: webcam; debugUIEnabled: false;"
         >
             <a-assets>
                 <a-asset-item
@@ -28,7 +28,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="5 5 5"
-                    position="0 0 20"
+                    gps-entity-place="latitude: 2.486700; longitude: -75.730460;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
